--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "anymatch": "^3.1.2",
     "array-flatten": "^1.1.1",
     "balanced-match": "^1.0.2",
+    "bcryptjs": "^2.4.3",
     "binary-extensions": "^2.2.0",
     "body-parser": "^1.20.0",
     "brace-expansion": "^1.1.11",
@@ -31,6 +32,7 @@
     "escape-html": "^1.0.3",
     "etag": "^1.8.1",
     "express": "^4.18.1",
+    "express-async-handler": "^1.2.0",
     "fill-range": "^7.0.1",
     "finalhandler": "^1.2.0",
     "forwarded": "^0.2.0",
@@ -57,6 +59,7 @@
     "mime-db": "^1.52.0",
     "mime-types": "^2.1.35",
     "minimatch": "^3.1.2",
+    "mongoose": "^6.4.5",
     "ms": "^2.0.0",
     "negotiator": "^0.6.3",
     "nodemon": "^2.0.19",
