--- a/frontend/package.json
+++ b/frontend/package.json
@@ -45,6 +45,7 @@
     ]
   },
   "devDependencies": {
-    "date-fns": "^2.28.0"
+    "date-fns": "^2.28.0",
+    "eslint-plugin-react-hooks": "^4.6.0"
   }
 }
